--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lavange-stocks-frontend",
+	"name": "lavange-ipo-frontend",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -10,9 +10,15 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@carbon/charts-svelte": "^1.13.6",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/bcryptjs": "^2.4.5",
+		"@types/jsonwebtoken": "^9.0.4",
 		"carbon-components-svelte": "^0.81.2",
+		"d3": "^7.8.5",
+		"d3-cloud": "^1.2.7",
+		"d3-sankey": "^0.12.3",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"typescript": "^5.0.0",
@@ -22,6 +28,9 @@
 	"dependencies": {
 		"@types/lodash": "^4.14.200",
 		"carbon-icons-svelte": "^12.3.0",
+		"dotenv": "^16.3.1",
+		"jsonwebtoken": "^9.0.2",
+		"jsonwebtoken-esm": "^2.0.1",
 		"lodash": "^4.17.21"
 	}
 }
