--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@types/lodash": "^4.14.200",
 		"carbon-icons-svelte": "^12.3.0",
 		"dotenv": "^16.3.1",
+		"idb": "^7.1.1",
 		"jsonwebtoken": "^9.0.2",
 		"jsonwebtoken-esm": "^2.0.1",
 		"lodash": "^4.17.21"
