--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
 	"type": "module",
 	"dependencies": {
 		"@types/lodash": "^4.14.200",
+		"bson-objectid": "^2.0.4",
+		"buffer": "^6.0.3",
 		"carbon-icons-svelte": "^12.3.0",
+		"csv-parser": "^3.0.0",
 		"dotenv": "^16.3.1",
 		"idb": "^7.1.1",
 		"jsonwebtoken": "^9.0.2",
 		"jsonwebtoken-esm": "^2.0.1",
-		"lodash": "^4.17.21"
+		"lodash": "^4.17.21",
+		"papaparse": "^5.4.1"
 	}
 }
